Dev 7226 stuff for the ui (#57)
* Add getGroupsPerServiceAndEnvironment to API

* New deployment and deployment history

* Ongoing deployment part1

* Ongoing deployment part 2

* Change back config file

* Change name and URL to "getGroupByName"

* Service versions, actually deploy with group and more

* Add pretty colored rectangle around the group status in ongoing deployments

* Fix the envStatus - remove "unknown"s and make pretty

* Improve UI

* Make the groups in service versions scrollable

--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -82,6 +82,15 @@ text-decoration: none;
 background-color: #eee;
 }
 
+.apollo-pic-container {
+    height: 100px;
+    overflow-y: auto;
+}
+
+.apollo-table {
+    margin-bottom: 2px;
+}
+
 .apollo-flow-button {
 
   margin: 10px 10px 10px 10px;
