--- a/ui/app/views/deployments/new.html
+++ b/ui/app/views/deployments/new.html
@@ -82,6 +82,45 @@
             </div>
         </div>
 
+        <!-- Groups chooser div -->
+        <div class="col-lg-12 col-sm-12 animate-switch-container" ng-switch-when="choose-groups">
+            <div class="panel panel-default">
+                <div class="panel-heading apollo-form-headline">
+                    Select groups
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover" datatable="ng" dt-options="dtOptions">
+                            <thead>
+                            <tr>
+                                <th></th>
+                                <th>Name</th>
+                                <th>Scaling Factor</th>
+                                <th>Parameters</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="group in possibleGroups | filter:globalSearch"
+                                ng-click="toggleSelectedGroup(group)"
+                                ng-class="{'active':selectedGroups.contains(group)}">
+                                <td>
+                                    <input type="checkbox"
+                                           name="selectedGroups[]"
+                                           value="{{group}}"
+                                           ng-checked="selectedGroups.indexOf(group) > -1">
+                                </td>
+                                <td>{{group.name}}</td>
+                                <td>{{group.scalingFactor}}</td>
+                                <td>{{group.jsonParams}}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-outline btn-default" ng-click="selectAllGroups()">Select All</button>
+        </div>
+
         <!-- Version chooser div -->
         <div class="col-lg-12 col-sm-12 animate-switch-container" ng-switch-when="choose-version">
             <div class="panel panel-default">
@@ -127,10 +166,10 @@
 
             <div class="well">
                 <h4>So just making sure</h4>
-                <p> You are going to deploy commit <b>{{versionSelected.gitCommitSha}}</b><br>
-                    to service <b>{{serviceSelected.name}}</b><br>
-                    on environment <b>{{environmentSelected.name}}</b></p>
-                <br>
+                <p>You are going to deploy commit <b>{{versionSelected.gitCommitSha}}</b><br> </p>
+                <p>To service <b>{{serviceSelected.name}}</b><br></p>
+                <p>On environment <b>{{environmentSelected.name}}</b></p>
+                <p ng-if="selectedGroups.length > 0">On groups <b>{{groupNames}}</b></p><br>
                 <button class="btn btn-default btn-lg center-block" data-toggle="modal" data-target="#confirm-modal">That is correct</button>
             </div>
 
