--- a/ui/app/views/deployments/history.html
+++ b/ui/app/views/deployments/history.html
@@ -62,6 +62,7 @@
                             <th>Last Updated</th>
                             <th>Service</th>
                             <th>Environment</th>
+                            <th>Group</th>
                             <th>Initiated By</th>
                             <th>Status</th>
                             <th>Actions</th>
@@ -77,6 +78,7 @@
                                 <td>{{deployment.lastUpdate | date:'dd/MM/yy HH:mm:ss'}}</td>
                                 <td>{{allServices[deployment.serviceId].name}}</td>
                                 <td>{{allEnvironments[deployment.environmentId].name}}</td>
+                                <td>{{deployment.groupName}}</td>
                                 <td>{{allUsers[deployment.userEmail].userEmail}}</td>
                                 <td><span class="label" ng-class="getLabel(deployment.status)">{{deployment.status}}</span></td>
                                 <td>
@@ -89,6 +91,11 @@
                                             ng-click="setSelectedDeployment(deployment)"
                                             data-toggle="modal" data-target="#confirm-revert">
                                         <i class="fa fa-undo"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-success btn-circle" uib-tooltip="Environment status"
+                                            ng-click="setSelectedDeployment(deployment); showEnvStatus(deployment)"
+                                            data-toggle="modal" data-target="#show-env-status">
+                                        <i class="fa fa-eye"></i>
                                     </button>
                                 </td>
                             </tr>
@@ -114,9 +121,9 @@
                     and double check with at least 2 people that this is really, <b>really</b> what you want to do.
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="revert()">
-                        Im 100% sure, and i know it can break everything!
+                        I'm 100% sure, and I know it can break everything!
                     </button>
                 </div>
             </div>
@@ -145,7 +152,29 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="show-env-status" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">Environment Status</h4>
+                </div>
+                <div class="modal-body">
+                    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="details-spinner"></span>
+                    <table class="table" style="table-layout: fixed">
+                        <tr>
+                            <pre>{{ envStatusWithServiceNames | json }}</pre>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
                 </div>
             </div>
         </div>
