--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -167,6 +167,15 @@ background-color: #eee;
     overflow: hidden;
 }
 
+.apollo-logo {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+a.navbar-brand {
+  padding: 9px 9px 2px
+}
+
 /* Animation stuff */
 .panel {
   overflow:hidden;
