Add deployment message, forced by environment

--- a/ui/app/views/deployments/history.html
+++ b/ui/app/views/deployments/history.html
@@ -97,6 +97,9 @@
                                             data-toggle="modal" data-target="#show-env-status">
                                         <i class="fa fa-eye"></i>
                                     </button>
+                                    <button type="button" class="btn btn-circle disabled" uib-tooltip="{{deployment.deploymentMessage || 'No message was provided'}}">
+                                        <i class="fa fa-comments"></i>
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
