--- a/ui/app/views/deployments/ongoing.html
+++ b/ui/app/views/deployments/ongoing.html
@@ -56,6 +56,9 @@
                                         data-toggle="modal" data-target="#status-per-group">
                                     <i class="fa fa-eye"></i>
                                 </button>
+                                <button type="button" class="btn btn-circle disabled" uib-tooltip="{{deployment.deploymentMessage || 'No message was provided'}}">
+                                    <i class="fa fa-comments"></i>
+                                </button>
                             </td>
                         </tr>
                         </tbody>
